tests/ui/recursion_limit/issue_21102.stderr
error: recursion limit reached while expanding `#[invalid_attribute]`
  --> $DIR/issue_21102.rs:6:1
   |
LL | #![invalid_attribute]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "8"]` attribute to your crate (`issue_21102`)

error: aborting due to previous error

